# substrate-storage-patch

client/chain-spec/derive/: Cargo.toml
client/executor/: Cargo.toml
client/network/: Cargo.toml
client/network-gossip/: Cargo.toml
client/offchain/: Cargo.toml
client/service/: Cargo.toml
client/tracing/: Cargo.toml
client/tracing/proc-macro/: Cargo.toml
frame/contracts/proc-macro/: Cargo.toml
frame/democracy/: Cargo.toml
frame/democracy/src/: migrations.rs
frame/election-provider-support/solution-type/: Cargo.toml
frame/preimage/: Cargo.toml
frame/preimage/src/: migration.rs
frame/scheduler/: Cargo.toml
frame/scheduler/src/: lib.rs  migration.rs
frame/staking/reward-curve/: Cargo.toml
frame/support/procedural/: Cargo.toml
frame/support/procedural/tools/: Cargo.toml
frame/support/procedural/tools/derive/: Cargo.toml
frame/vesting/: Cargo.toml
frame/vesting/src/: migrations.rs
primitives/api/proc-macro/: Cargo.toml
primitives/core/: Cargo.toml
primitives/core/hashing/proc-macro/: Cargo.toml
primitives/debug-derive/: Cargo.toml
primitives/io/: Cargo.toml
primitives/runtime-interface/proc-macro/: Cargo.toml
primitives/runtime-interface/test/: Cargo.toml
primitives/state-machine/: Cargo.toml
primitives/tracing/: Cargo.toml
primitives/trie/: Cargo.toml
primitives/version/proc-macro/: Cargo.toml
test-utils/derive/: Cargo.toml
