[package]
name = "pallet-scheduler"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME Scheduler pallet"
readme = "README.md"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, path = "../benchmarking" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false,  branch = "polkadot-v0.9.42" }
frame-system ={ git = "https://github.com/paritytech/substrate", default-features = false,  branch = "polkadot-v0.9.42" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false,  branch = "polkadot-v0.9.42" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false,  branch = "polkadot-v0.9.42" }
sp-std ={ git = "https://github.com/paritytech/substrate", default-features = false,  branch = "polkadot-v0.9.42" }
sp-weights = { git = "https://github.com/paritytech/substrate", default-features = false,  branch = "polkadot-v0.9.42" }

[dev-dependencies]
pallet-preimage ={ git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.42" }
sp-core ={ git = "https://github.com/paritytech/substrate", default-features = false,  branch = "polkadot-v0.9.42" }
substrate-test-utils = { git = "https://github.com/paritytech/substrate",  branch = "polkadot-v0.9.42" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-weights/std",
]
try-runtime = ["frame-support/try-runtime"]
